# SP-PRO

./: .gitignore  CMakeLists.txt  README.md  merge_bin.py  partitions-S3.csv  partitions.csv  partitions_two_ota.csv  ram elf.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/opus_player/: CMakeLists.txt  OPUS_PLAYER_README.md  idf_component.yml
components/opus_player/include/: opus_player.h  opus_player_audio.h  opus_player_common.h  opus_player_storage.h
components/opus_player/src/: opus_player.c  opus_player_audio.c  opus_player_storage.c
components/opus_player_test/: CMakeLists.txt  opus_player_test.c
main/: CMakeLists.txt  GATT&MESH.md  board_config.h  idf_component.yml  main.c  sysdef.h  system_runtime.h
main/ble_GATT/: ble_pairing.c  ble_pairing.h
main/ble_mesh/: ble_mesh_client_drv.c  ble_mesh_client_drv.h  ble_mesh_scale_client_mod.c  ble_mesh_scale_client_mod.h
main/bsp_driver/: ble.c  ble.h  controller_status_types.h  factory_cfg.c  factory_cfg.h  led.c  led.h  mqtt.c  mqtt.h  spiffs.c  spiffs.h  uart_ctr.c  uart_ctr.h  uart_hmi.c  uart_hmi.h  wifi.c  wifi.h
main/mqtt_auth/: RSA_sign.c  RSA_sign.h  mqtt_auth.c  mqtt_auth.h
main/ota_ctr_esp32/: Ymodem_esp.c  Ymodem_esp.h  ota_bundle.c  ota_bundle.h  ota_bundle_format.h  ota_ctr.c  ota_ctr.h  ota_esp32.c  ota_esp32.h
main/service/: circular_buff.c  circular_buff.h  ctr_scheduler.c  ctr_scheduler.h  device_statistics_store.c  device_statistics_store.h  drink_record_service.c  drink_record_service.h  event_record_service.c  event_record_service.h  extraction_curve_service.c  extraction_curve_service.h  formula_store.c  formula_store.h  led_service.c  led_service.h  nvs_retry.c  nvs_retry.h  ram_diag.c  ram_diag.h  record_publish_port.h  service_domain_types.h
main/sp_pro_app/: sp_pro_app.c  sp_pro_app.h  sp_pro_app_context.h  sp_pro_app_ctrl.h  sp_pro_app_state.h  sp_pro_app_types.h  sp_pro_build_flags.h
main/sp_pro_app/builder/: builder_audio.c  builder_cmd.c  builder_elem.c  builder_page.c
main/sp_pro_app/input/: input_key_scan.c
main/sp_pro_app/state/: state_alarm.c  state_calibration.c  state_clear_bean.c  state_drink.c  state_lock.c  state_maint.c  state_ota.c  state_power.c  state_ready.c  state_setting.c  state_wifi.c
main/sp_protocol/: mqtt_protocol.c  mqtt_protocol.h  mqtt_protocol_codec.h  mqtt_protocol_control.c  mqtt_protocol_core.c  mqtt_protocol_core.h  mqtt_protocol_curve.c  mqtt_protocol_formula.c  mqtt_protocol_ota.c  mqtt_protocol_resource.c  mqtt_protocol_status.c  mqtt_record_publish_port.c  sp_pro_proto.c  sp_pro_proto.h
server/: API_DOC.md  opus_server.py
server/opus_files/: AddCleanPowder.opus  AddWaterAndDescalingPowder.opus  AddWaterToCleaningLine.opus  AddWaterToMaxLevel.opus  AlertBeanBinDisplaced.opus  AutoPowerOff.opus  BeanHopperMissing.opus  BeanHopperWarning.opus  BucketModeAlert.opus  BucketModeWaterAddReminder.opus  CalibrationCompleted.opus  CancelMakeCoffee.opus  CautionHotSteam.opus  ChangeWater.opus  CleanFinished.opus  CleanFrontBrewUnit.opus  CleanSteamWand.opus  ClickCleanButton.opus  ConfirmFactoryReset.opus  ContinueCleanAfterPowerOff.opus  CurrentWaterBucketMode.opus  CurrentWaterTankMode.opus  Descaling.opus  DetectionAbnormal.opus  DetectionPassed.opus  EmptyWaterTray.opus  ExitSwitchInletMode.opus  FactoryResetCompleted.opus  FactoryRestoreWarning.opus  FillCoffeeBeans.opus  (+52 more)
(+14 files in other folders)
